--- a/index.css
+++ b/index.css
@@ -66,6 +66,25 @@ p {
     line-height: 1.4;
 }
 
+
+.headerContainer  {
+    display: flex;
+    flex-wrap: nowrap;
+    width: 800px;
+    align-items: flex-end;
+    margin-left: 34.5%;
+}
+.headerImage {
+margin: 1% auto 1% 34.5%;
+}
+.navBar {
+    display: flex;
+    margin-left: 2%;
+}
+.navBar div {
+    margin: 0 15%;
+}
+
 .container {
     width: 800px;
     margin: 0 auto;
