About page semantics

--- a/index.css
+++ b/index.css
@@ -73,16 +73,19 @@ p {
     width: 800px;
     align-items: flex-end;
     margin-left: 34.5%;
+    margin-top: 1%;
 }
-.headerImage {
+.headerImage , .aboutHeaderImage {
 margin: 1% auto 1% 34.5%;
 }
 .navBar {
     display: flex;
     margin-left: 2%;
 }
-.navBar div {
+.navBar a {
     margin: 0 15%;
+    text-decoration: none;
+    color: black
 }
 
 .container {
@@ -123,14 +126,42 @@ margin: 1% auto 1% 34.5%;
 .middle-content .boxes .box {
     width: 12.5%;
     height: 100px;
-    background: black;
     margin: 20px 2.5%;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
+#box1 {
+    background-color: teal;
+}
+#box2 {
+    background-color: gold;
+}
+#box3 {
+    background-color: cadetblue;
+}
+#box4 {
+    background-color: coral;
+}
+#box5 {
+    background-color: crimson;
+}
+#box6 {
+    background-color: forestgreen;
+}
+#box7 {
+    background-color: darkorchid;
+}
+#box8 {
+    background-color: hotpink;
+}
+#box9 {
+    background-color: indigo;
+}
+#box10 {
+    background-color: dodgerblue;
+}
 .bottom-content {
     display: flex;
     margin: 0 2% 20px;
@@ -162,4 +193,18 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+.mid {
+    display: flex;
+    flex-flow: wrap;
+    width: 800px;
+}
+.mid .strategy {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.strategy div {
+    display: flex;
+    flex-direction: column;
 }
