--- a/index.css
+++ b/index.css
@@ -66,7 +66,7 @@ p {
     line-height: 1.4;
 }
 
-
+/* Header */
 .headerContainer  {
     display: flex;
     flex-wrap: nowrap;
@@ -88,6 +88,8 @@ margin: 1% auto 1% 34.5%;
     color: black
 }
 
+
+/* Text */
 .container {
     width: 800px;
     margin: 0 auto;
@@ -117,6 +119,8 @@ margin: 1% auto 1% 34.5%;
     margin-bottom: 0;
 }
 
+
+/* middle boxes */
 .middle-content .boxes {
     display: flex;
     flex-wrap: wrap;
@@ -176,6 +180,7 @@ margin: 1% auto 1% 34.5%;
     padding-right: 0;
 }
 
+/* Footer */
 footer {
     width: 100%;
     background: black;
@@ -206,6 +211,9 @@ footer nav a {
     width: 50%;
     padding: 2%;
 }
+
+
+/* About Page */
 .aboutText {
     padding-bottom: 3%;
     border-bottom: 1px dashed black;
